@@ -55,9 +55,15 @@ public:
   virtual int put (ACE_Message_Block *, ACE_Time_Value * = 0);
 
   // Hook method called when server connection is established.
-  using ACE_Service_Handler::open;
   virtual void open (ACE_HANDLE new_handle,
                      ACE_Message_Block &message_block);
+
+  // A trivial implementation that is needed to suppress compile
+  // warnings/errors.
+  virtual int open (void *args)
+  {
+    return ACE_Task<ACE_NULL_SYNCH>::open (args);
+  }
 
 protected:
   ACE_Asynch_Read_Stream  reader_;   // Detects connection loss
